--- a/index.html
+++ b/index.html
@@ -3,7 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Assignment Two</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bolder; font-size: 52px; color: azure;"> GAME-DAY USA</a>
+        <a href="#ms-stad"; style="color: palevioletred; font-family: sans-serif; font-weight: bolder; font-size: 20px;"> Mercedes Benz Stadium</a>
+        <a href="#att-stad"; style="color: wheat; font-family: sans-serif; font-weight: bolder; font-size: 20px;">AT&T Stadium</a>
+        <a href="#gee-stad"; style="color: teal; font-family: sans-serif; font-weight: bolder; font-size: 20px;">Allegiant Stadium</a>
+      </nav>
+    </header>
+
+    <section id="ms-stad" class="Content one m-stad">
+      <div class="m-position">
+        <img src="" alt="" />
+        <h3 style="font-size: 30px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bolder; color: palevioletred;">MERCEDES-BENZ STADIUM</h3>
+        <h2 style="font-size: 50px; font-weight: bolder; font-family: sans-serif;">ATLANTA, GEORGIA</h2>
+        <a href="https://www.youtube.com/watch?v=-8xXZF3UrmY/">
+        <button style="background-color: palevioletred; font-family: sans-serif; font-weight: bolder; width: 10cm; height: 1cm; border-color: purple;">MORE INFO</button>
+      </a>
+      </div>
+    </section>
+
+    <section id="att-stad" class="Content two a-stad">
+      <div class="att-position">
+        <img src="" alt="" />
+        <h3 style="font-size: 30px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bolder; color: wheat;">AT&T STADIUM</h3>
+        <h2 style="font-size: 50px; font-weight: bolder; font-family: sans-serif;">ARLINGTON, TEXAS</h2>
+        <a href="https://www.youtube.com/watch?v=-1_MPf4wKiE">
+        <button style="background-color: wheat; font-family: sans-serif; font-weight: bolder; width: 10cm; height: 1cm; border-color: antiquewhite;">MORE INFO</button>
+      </a>
+      </div>
+    </section>
+
+    <section id="gee-stad" class="Content three g-stad">
+      <div class="gee-position">
+        <img src="" alt="" />
+        <h3 style="font-size: 30px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bolder; color: teal;">ALLEGIANT STADIUM<h3>
+        <h2 style="font-size: 50px; font-weight: bolder; font-family: sans-serif;">PARADISE, NEVADA</h2>
+        <a href="https://www.youtube.com/watch?v=TYvgjBqy6Ho&t=20s">
+        <button style="background-color: teal; font-family: sans-serif; font-weight: bolder; width: 10cm; height: 1cm; border-color: grey;"> MORE INFO</button>
+      </a>
+      </div>
+    </section>
+  </body>
+  <footer>
+  <div id="copyright">
+    <p>Copyright 2029 STADIUMS Ltd 2025</p>
+    <a href="https://www.youtube.com/watch?v=VyIOn5l_IMI">T&C</a>
+  </div>
+</footer>
 </html>
