--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="#ms-stad"; style="color: palevioletred; font-family: sans-serif; font-weight: bolder; font-size: 20px;"> Mercedes Benz Stadium</a>
         <a href="#att-stad"; style="color: wheat; font-family: sans-serif; font-weight: bolder; font-size: 20px;">AT&T Stadium</a>
         <a href="#gee-stad"; style="color: teal; font-family: sans-serif; font-weight: bolder; font-size: 20px;">Allegiant Stadium</a>
+        <a href="#cs-stad" style="color: darkseagreen; font-family: sans-serif; font-weight: bolder; font-size: 20px;">Caesars Superdome</a>
       </nav>
     </header>
 
@@ -49,11 +50,22 @@
       </a>
       </div>
     </section>
+
+    <section id="cs-stad" class="Content four c-stad">
+      <div class="c-position">
+        <img src="" alt="" />
+        <h3 style="font-size: 30px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bolder; color: darkseagreen;">CAESARS SUPERDOME</h3>
+        <h2 style="font-size: 50px; font-weight: bolder; font-family: sans-serif;">NEW ORLEANS, LOUISIANA</h2>
+        <a href="https://www.youtube.com/watch?v=jf3736ytmrQ">
+        <button style="background-color: darkseagreen; font-family: sans-serif; font-weight: bolder; width: 10cm; height: 1cm; border-color: black;">MORE INFO</button>
+      </a>
+      </div>
+    </section>
   </body>
   <footer>
   <div id="copyright">
-    <p>Copyright 2029 STADIUMS Ltd 2025</p>
-    <a href="https://www.youtube.com/watch?v=VyIOn5l_IMI">T&C</a>
+    <p>Copyright 2029 STADIUMS Ltd 2025 - </p>
+    <a href="https://www.youtube.com/watch?v=VyIOn5l_IMI" style="color: gold; font-style: italic;"> Terms&Conditions</a>
   </div>
 </footer>
 </html>
